projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/format_rejects_int_spec_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "format_rejects_int_spec_argument"
# subject = "format"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""format: format_rejects_int_spec_argument (errors)."""
try:
    result = format(1, 2)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
